grpc-client/k8/deployment-istio.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grpc-client-istio
  namespace: grpc-istio
  labels:
    name: grpc-client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grpc-client
  template:
    metadata:
      labels:
        app: grpc-client
      annotations:
        sidecar.istio.io/inject: 'true'
        proxy.istio.io/config: 'holdApplicationUntilProxyStarts: true'
        inject.istio.io/templates: 'grpc-agent'
    spec:
      containers:
        - name: grpc-client
          image: grpc-client:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
