grpc-client/k8/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: grpc-client-service
  namespace: grpc-istio
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8080
      name: tcp-8080
      targetPort: 8080
  selector:
    app: grpc-client
