grpc-client/k8/Gateway_Route.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: grpcclient-gateway
  namespace: grpc-istio
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 8080
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grpc-client-virtual-service
  namespace: grpc-istio
spec:
  hosts:
    - "*"
  gateways:
    - grpcclient-gateway
  http:
    - match:
      - uri:
          exact: /grpc_client/serverSubset
      route:
      - destination:
          host: grpc-client-service
          port:
            number: 8080
