grpc-client/k8/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-grpc-client
  namespace: grpc-istio
spec:
  defaultBackend:
    service:
      name: grpc-client-service
      port:
        number: 8080
